# claude-usage-tracker

./: .gitignore  LICENSE  README.md  claude_usage_tracker.py  install.py  installer.iss  pyproject.toml  requirements.txt  supabase_pool.py  uninstall.py
.github/workflows/: ci.yml  installer.yml  publish.yml
android/: .gitignore  README.md
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/claudeusage/tracker/: Crypto.kt  Pairing.kt  Prefs.kt  RelayClient.kt  Snapshot.kt
android/app/src/main/java/com/claudeusage/tracker/push/: PushService.kt
android/app/src/main/java/com/claudeusage/tracker/ui/: DashboardScreen.kt  MainActivity.kt  PairScreen.kt  PortraitCaptureActivity.kt  Theme.kt
android/app/src/main/java/com/claudeusage/tracker/widget/: UsageWidget.kt  UsageWidgetReceiver.kt  WidgetRefresh.kt
android/app/src/main/res/values/: strings.xml
android/app/src/main/res/xml/: usage_widget_info.xml
docs/: COMPLIANCE.md  GO-LIVE.md  MCP-REMOTE.md  PLAY.md  PRIVACY.md  RELEASE-0.3.md  REMOTE.md  SUPABASE-MIGRATION.md  TEAM.md
docs/play/: listing.md
docs/superpowers/plans/: 2026-07-06-dashboard-redesign.md  2026-07-06-team-tab-v2.md
docs/superpowers/specs/: 2026-07-06-dashboard-bento-redesign-design.md  2026-07-06-team-tab-redesign-design.md
mcp/: README.md  manifest.json  package-lock.json  package.json  server.mjs
relay/: README.md  schema.sql  wrangler.toml
relay/src/: index.js
supabase/migrations/: 0001_pool.sql
tests/: test_core.py  test_remote.py  test_session_hook.py  test_team.py
